[workspace]
members = ["datachannel-facade", "examples/simple-wasm-client", "examples/simple-server", "libdatachannel", "libdatachannel-sys", "web-datachannel"]

[package]
name = "dachannel"
version = "0.1.0"
edition = "2021"
license = "MIT"

[features]
default = []
server = ["dep:hyper-util", "dep:http-body-util", "dep:tokio", "dep:axum", "dep:tower-http"]
client = ["dep:reqwest"]

[dependencies]
async-channel = "2"
async-lock = "3"
event-listener = "5"
datachannel-facade = { path = "datachannel-facade" }
reqwest = { version = "0.11", optional = true }
log = "0.4"
thiserror = "1"

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
axum = { version = "0.7", optional = true }
tower-http = { version = "0.5", optional = true, features = ["cors"] }
hyper-util = { version = "0.1", optional = true, features = ["full"] }
http-body-util = { version = "0.1", optional = true }
tokio = { version = "1", optional = true, features = ["full"] }

[dev-dependencies]
cfg-if = "1"

[target.'cfg(not(target_arch = "wasm32"))'.dev-dependencies]
pollster = { version = "0.3", features = ["macro"] }

[target.'cfg(target_arch = "wasm32")'.dev-dependencies]
wasm-bindgen-test = "0.3"
