[workspace]
members = ["datachannel-facade", "examples/simple-wasm-client", "examples/simple-echo-server", "libdatachannel", "libdatachannel-sys", "web-datachannel", "dachannel-client", "dachannel-server", "examples/simple-echo-client"]

[package]
name = "dachannel"
version = "0.1.0"
edition = "2021"
license = "MIT"

[dependencies]
async-channel = "2"
async-lock = "3"
datachannel-facade = { path = "datachannel-facade" }
event-listener = "5"
log = "0.4"
thiserror = "1"

[dev-dependencies]
cfg-if = "1"

[target.'cfg(not(target_arch = "wasm32"))'.dev-dependencies]
pollster = { version = "0.3", features = ["macro"] }

[target.'cfg(target_arch = "wasm32")'.dev-dependencies]
wasm-bindgen-test = "0.3"
