[workspace]
members = ["datachannel-facade", "examples/simple-wasm-client", "examples/simple-echo-server", "libdatachannel", "libdatachannel/libdatachannel-sys", "web-datachannel", "dachannel-client", "dachannel-server", "examples/simple-echo-client"]

[package]
name = "dachannel"
description = "Less painful WebRTC DataChannels"
version = "0.2.1"
edition = "2021"
license = "MIT"
repository = "https://github.com/coevolutions/dachannel"

[dependencies]
async-channel = "2"
async-lock = "3"
datachannel-facade = { version = "0.2", path = "datachannel-facade" }
event-listener = "5"
log = "0.4"
thiserror = "1"

[dev-dependencies]
cfg-if = "1"

[target.'cfg(not(target_arch = "wasm32"))'.dev-dependencies]
pollster = { version = "0.3", features = ["macro"] }

[target.'cfg(target_arch = "wasm32")'.dev-dependencies]
wasm-bindgen-test = "0.3"
