[package]
name = "dachannel-client"
version = "0.2.1"
description = "Client library for dachannel"
edition = "2021"
license = "MIT"
repository = "https://github.com/coevolutions/dachannel"

[dependencies]
dachannel = { version = "0.3", path = ".." }
reqwest = "0.11"
thiserror = "1"

[target.'cfg(not(target_arch = "wasm32"))'.dev-dependencies]
dachannel-server = { path = "../dachannel-server" }
tokio = { version = "1", features = ["full"] }
