[package]
name = "dachannel-server"
version = "0.1.0"
description = "Server library for dachannel"
edition = "2021"
license = "MIT"
repository = "https://github.com/coevolutions/dachannel"

[dependencies]
async-channel = "2"
axum = "0.7"
dachannel = { version = "0.2", path = ".." }
datachannel-facade = { version = "0.2", path = "../datachannel-facade" }
log = "0.4"
tower-http = { version = "0.5", features = ["cors", "limit"] }
hyper-util = { version = "0.1", features = ["full"] }
http-body-util = "0.1"
tokio = { version = "1", features = ["full"] }
tokio-util = { version = "0.7", features = ["io"] }
thiserror = "1"
