[package]
name = "datachannel-facade"
description = "Facade for cross-platform WebRTC DataChannels"
version = "0.0.0"
edition = "2021"
license = "MIT"
repository = "https://github.com/coevolutions/dachannel"

[dependencies]
cfg-if = "1"
log = "0.4"
thiserror = "1"

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
libdatachannel = { path = "../libdatachannel" }
urlencoding = "2"

[target.'cfg(target_arch = "wasm32")'.dependencies]
web-datachannel = { path = "../web-datachannel" }

[dev-dependencies]
async-channel = "2"
async-notify = "0.3"

[target.'cfg(not(target_arch = "wasm32"))'.dev-dependencies]
pollster = { version = "0.3", features = ["macro"] }

[target.'cfg(target_arch = "wasm32")'.dev-dependencies]
wasm-bindgen-test = "0.3"
