[package]
name = "libdatachannel"
description = "Rust wrapper for libdatachannel"
version = "0.1.0+0.20.1"
edition = "2021"
license = "MIT"
repository = "https://github.com/coevolutions/dachannel"

[dependencies]
log = "0.4"
libdatachannel-sys = { version = "0.20", path = "./libdatachannel-sys" }
num-derive = "0.4"
num-traits = "0.2"
thiserror = "1"

[dev-dependencies]
test-log = "0.2"
