[package]
name = "web-datachannel"
description = "Rust wrapper for WASM WebRTC"
version = "0.1.0"
edition = "2021"
license = "MIT"
repository = "https://github.com/coevolutions/dachannel"

[dependencies]
js-sys = "0.3"
log = "0.4"
wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4"
serde = { version = "1", features = ["derive"] }
serde-wasm-bindgen = "0.4"
thiserror = "1"

[dependencies.web-sys]
version = "0.3"
features = ["MessageEvent", "RtcPeerConnection", "RtcSignalingState", "RtcSdpType", "RtcSessionDescriptionInit", "RtcPeerConnectionIceEvent", "RtcIceCandidate", "RtcIceCandidateInit", "RtcDataChannel", "RtcDataChannelInit", "RtcDataChannelEvent", "RtcIceGatheringState", "RtcPeerConnectionState", "RtcSessionDescription", "RtcConfiguration", "RtcIceTransportPolicy", "ErrorEvent"]

[dev-dependencies]
async-channel = "2"
async-notify = "0.3"
wasm-bindgen-test = "0.3"
console_error_panic_hook = "0.1"
