[package]
name = "simple-echo-server"
version = "0.0.0"
edition = "2021"

[dependencies]
clap = { version = "4", features = ["derive"] }
env_logger = "0.11"
futures = "0.3"
dachannel = { path = "../.." }
dachannel-server = { path = "../../dachannel-server" }
tokio = { version = "1", features = ["full"] }
