[package]
name = "libdatachannel-sys"
description = "Bindings to libdatachannel's C API"
version = "0.20.1"
edition = "2021"
license = "MPL-2.0"
repository = "https://github.com/coevolutions/dachannel"
exclude = ["libdatachannel/examples", "libdatachannel/deps/*/fuzzer", "libdatachannel/deps/*/test", "libdatachannel/deps/*/tests", "libdatachannel/deps/json"]

[build-dependencies]
bindgen = "0.69"
cmake = "0.1"
cpp_build = "0.5"
openssl-src = "300"
